--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Upload frontend artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: frontend
+          path: frontend/*
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
